# lr_2

./: CMakeLists.txt  CMakeListst.txt
.github/workflows/: CI.yml  build  build.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
tests/: test1.cpp
